封装了支付的方法

--- a/app/src/main/res/layout/activity_my_order.xml
+++ b/app/src/main/res/layout/activity_my_order.xml
@@ -13,12 +13,7 @@
         android:background="@color/top_color"
         android:layout_width="match_parent"
         android:layout_height="40dp">
-        <ImageView
-            android:id="@+id/iv_myOrder_back"
-            android:src="@drawable/back"
-            android:layout_height="match_parent"
-            android:layout_width="40dp"
-            />
+        <include layout="@layout/commom_back_btn"></include>
         <TextView
             android:text="我的预约"
             android:textColor="#fff"
