--- a/app/src/main/res/layout/activity_pay_video.xml
+++ b/app/src/main/res/layout/activity_pay_video.xml
@@ -11,12 +11,7 @@
         android:background="@color/top_color"
         android:layout_width="match_parent"
         android:layout_height="40dp">
-        <ImageView
-            android:id="@+id/iv_payvideo_back"
-            android:src="@drawable/back"
-            android:layout_height="match_parent"
-            android:layout_width="40dp"
-            />
+        <include layout="@layout/commom_back_btn"></include>
         <TextView
             android:text="购买视频"
             android:textColor="#fff"
