--- a/app/src/main/res/layout/activity_partner__clothes.xml
+++ b/app/src/main/res/layout/activity_partner__clothes.xml
@@ -30,15 +30,8 @@
         android:id="@+id/rl_partner_clothes_top"
         android:background="@color/top_color"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
-        <ImageView
-            android:id="@+id/iv_partner_clothes_back"
-            android:src="@drawable/back"
-            android:layout_height="match_parent"
-            android:layout_width="40dp"
-            />
+        android:layout_height="40dp">
+        <include layout="@layout/commom_back_btn"></include>
         <TextView
             android:text="服饰伙伴"
             android:textColor="#fff"
@@ -47,6 +40,15 @@
             android:layout_centerInParent="true"
             android:textSize="@dimen/text_size_big"
             />
+        <TextView
+            android:id="@+id/tv_partner_clothes_record"
+            android:padding="@dimen/distance_5"
+            android:layout_centerVertical="true"
+            android:layout_alignParentEnd="true"
+            android:textColor="@color/main_color_write"
+            android:text="记录"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </RelativeLayout>
     <TextView
         android:id="@+id/tv_partner_clothes_pager"
