--- a/app/src/main/res/layout/activity_lable.xml
+++ b/app/src/main/res/layout/activity_lable.xml
@@ -215,7 +215,7 @@
                 android:layout_marginTop="@dimen/distance_8"
                 android:hint="请输入购买时间"
                 android:textColorHint="@color/write"
-                android:textSize="@dimen/text_size_minimum"
+                android:textSize="@dimen/text_size_13"
                 android:background="@drawable/back_black_writes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -226,7 +226,7 @@
                 android:layout_height="wrap_content" />
             <EditText
                 android:textColor="@color/write"
-                android:textSize="@dimen/text_size_minimum"
+                android:textSize="@dimen/text_size_13"
                 android:padding="@dimen/distance"
                 android:id="@+id/et_label_price"
                 android:windowSoftInputMode="adjustPan"
@@ -249,7 +249,7 @@
                 android:hint="请输入尺码"
                 android:textColor="@color/write"
                 android:textColorHint="@color/write"
-                android:textSize="@dimen/text_size_minimum"
+                android:textSize="@dimen/text_size_13"
                 android:background="@drawable/back_black_writes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -266,7 +266,7 @@
                 android:layout_marginTop="@dimen/distance_8"
                 android:hint="请输入品牌"
                 android:textColorHint="@color/write"
-                android:textSize="@dimen/text_size_minimum"
+                android:textSize="@dimen/text_size_13"
                 android:background="@drawable/back_black_writes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -283,7 +283,7 @@
                 android:layout_marginTop="@dimen/distance_8"
                 android:hint="请输入位置"
                 android:textColorHint="@color/write"
-                android:textSize="@dimen/text_size_minimum"
+                android:textSize="@dimen/text_size_13"
                 android:background="@drawable/back_black_writes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
