--- a/app/src/main/res/layout/activity_partner__clothes.xml
+++ b/app/src/main/res/layout/activity_partner__clothes.xml
@@ -31,7 +31,7 @@
         android:background="@color/top_color"
         android:layout_width="match_parent"
         android:layout_height="40dp">
-        <include layout="@layout/commom_back_btn"></include>
+        <include layout="@layout/btn_back"></include>
         <TextView
             android:text="服饰伙伴"
             android:textColor="#fff"
@@ -46,7 +46,7 @@
             android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
             android:textColor="@color/main_color_write"
-            android:text="记录"
+            android:text="历史记录"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </RelativeLayout>
