--- a/app/src/main/res/layout/activity_pay_order.xml
+++ b/app/src/main/res/layout/activity_pay_order.xml
@@ -12,7 +12,7 @@
         android:background="@color/top_color"
         android:layout_width="match_parent"
         android:layout_height="40dp">
-        <include layout="@layout/commom_back_btn"></include>
+        <include layout="@layout/btn_back"></include>
 
         <TextView
             android:text="订单支付"
