--- a/app/src/main/res/layout/item_fragment_buy_record.xml
+++ b/app/src/main/res/layout/item_fragment_buy_record.xml
@@ -1,62 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:padding="@dimen/distance"
+    android:orientation="vertical"
     android:background="@drawable/background"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <com.facebook.drawee.view.SimpleDraweeView
-        android:id="@+id/sv_item_buy_record"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        fresco:roundedCornerRadius="4dp"
-        />
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:layout_marginLeft="@dimen/distance"
-        android:layout_toEndOf="@+id/sv_item_buy_record">
-        <TextView
-            android:id="@+id/tv_item_buy_record_style"
-            android:text="款式"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/tv_item_buy_record_name"
-            android:text="名字"
-            android:layout_marginLeft="@dimen/distance"
-            android:layout_toRightOf="@+id/tv_item_buy_record_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/tv_item_buy_record_size"
-            android:text="尺码"
-            android:layout_centerVertical="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/tv_item_buy_record_color"
-            android:layout_toRightOf="@+id/tv_item_buy_record_size"
-            android:layout_centerVertical="true"
-            android:text="颜色"
-            android:layout_marginLeft="@dimen/distance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/tv_item_buy_record_price"
-            android:layout_alignParentBottom="true"
-            android:text="价格"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/tv_item_buy_record_count"
-            android:layout_alignParentBottom="true"
-            android:text="数量"
-            android:layout_marginLeft="@dimen/distance"
-            android:layout_toRightOf="@+id/tv_item_buy_record_price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </RelativeLayout>
+    <include layout="@layout/clothes_item_info"></include>
+
     <RelativeLayout
         android:layout_marginTop="@dimen/distance"
         android:layout_below="@+id/sv_item_buy_record"
@@ -89,4 +40,4 @@
             android:layout_alignParentStart="true" />
     </RelativeLayout>
 
-</RelativeLayout>
+</LinearLayout>
