--- a/app/src/main/res/layout/order_person.xml
+++ b/app/src/main/res/layout/order_person.xml
@@ -32,7 +32,7 @@
                     android:textColor="@color/text_color"
                     android:text="(已约满)"
                     android:visibility="gone"
-                    android:textSize="@dimen/text_size_minimum"
+                    android:textSize="@dimen/text_size_13"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 <TextView
